# steam-game-scraper

./: .gitignore  MANIFEST.in  README.md  cli.py  data_1174180_english.json  pyproject.toml  pytest.ini  setup.py
src/: main.py
src/steam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
steam_data/: app_details_types.py  base.py  combined_data.py  steam_app_details.py  store_html.py
steam_utils/: web_utils.py
steamscraper/: __init__.py  cli.py  main.py
steamscraper/steam_data/: __init__.py  combined_data.py  steam_app_details.py  store_html.py
steamscraper/steam_utils/: __init__.py  constants.py  utils.py
test_data/: ELDEN_RING-1245620-english.html  appdetails_1091500_english.json
tests/: test_data_sources.py  test_real_requests.py
tests/test_data/: Cyberpunk_2077-1091500-schinese.html  appdetails_1091500_schinese.json
