[project]
name = "steamscraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "pytest-mock>=3.14.1",
]

[tool.setuptools.packages]
find = { include = ["steamscraper"] }
